# palang

./: LICENSE  README.md
doc/: 1_0_0.md  bind.md  catalog.md  create.md  detag.md  erase.md  rebase.md  recycle.md  set.md  show.md  tag.md
palangCLI/palangCLI_c/src/: main.c
palangCLI/palangCLI_c/src/crypto/: aes.h  rsa.h
palangCLI/palangCLI_c/src/encoding/: base64.h  hex.h
palangCLI/palangCLI_c/src/socket/: tcp.h
palangCLI/palangCLI_c/src/util/: cli.h  mem.h  str.h
palangCLI/palangCLI_c_mac/: CMakeLists.txt
palangCLI/palangCLI_c_mac/src/: main.c
palangCLI/palangCLI_c_mac/src/crypto/: rsa.h
palangCLI/palangCLI_c_mac/src/encoding/: base64.h
palangCLI/palangCLI_c_mac/src/socket/: tcp.h
palangCLI/palangCLI_c_mac/src/util/: mem.h  str.h
palangCLI/palangCLI_c_win/: CMakeLists.txt
palangCLI/palangCLI_c_win/src/: main.c
palangCLI/palangCLI_c_win/src/crypto/: aes.h  rsa.h
palangCLI/palangCLI_c_win/src/encoding/: hex.h
palangCLI/palangCLI_c_win/src/socket/: tcp.h
palangCLI/palangCLI_c_win/src/util/: cli.h  str.h
palangCLI/palangCLI_fs/: Program.fs  palangCLI.fsproj  palangCLI.sln
palangServer/: Program.fs  config.yml  palangServer.fsproj  palangServer.sln
